[tool.poetry]
name = "codecraft"
version = "0.1.0"
description = "Make developers life easy"
authors = ["Avinash Singh <avinashsingh539@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "codecraft"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


requests = "^2.32.3"
tqdm = "^4.66.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
craft = "codecraft.codecraft:cli"